@@ -1,6 +1,7 @@
 0.2.0
 -----
 
+* Table.percent_change implemented. (#16)
 * Table.compute implemented. (#31)
 * Table.filter and Table.reject now take funcs. (#24)
 * Column.count implemented.
